Add footer & two blocks

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru" class="page">
 @include('partials/head.html')
-<body>
-@include('partials/header.html')
-  <main>
-
+<body class="body">
+  <main class="main">
+    @include('partials/body.html')
   </main>
-</body>
 @include('partials/footer.html')
+</body>
 </html>
