--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 @include('partials/head.html')
 <body class="body">
   <main class="main">
-    @include('partials/body.html')
+    @include('partials/content.html')
   </main>
 @include('partials/footer.html')
 </body>
